<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">RadioActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello world!</string>
    
    
    
    
    
     <string name="Mutt">Mutt</string>
     <string name="Toy">Toy</string>
     <string name="Terrier">Terrier</string>
     <string name="Working">Working</string>
     <string name="Hound">Hound</string>
     <string name="Herding">Herding</string>
     <string name="Sporting">Sporting</string>
     <string name="NonSporting">Non-Sporting</string>
   
     
</resources>
